[gd_scene load_steps=2 format=3 uid="uid://dev5dbnhd2diw"]

[ext_resource type="Script" uid="uid://ctwub6ej1nynm" path="res://Tasks/FileManager.gd" id="1_oo73u"]

[node name="Panel" type="Window"]
title = "File Transfer Manager"
initial_position = 1
size = Vector2i(638, 244)
script = ExtResource("1_oo73u")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Transfer" type="Button" parent="."]
offset_left = 231.0
offset_top = 168.0
offset_right = 407.0
offset_bottom = 208.0
text = "Transfer"

[node name="Progress" type="Panel" parent="."]
offset_left = 158.0
offset_top = 64.0
offset_right = 482.0
offset_bottom = 154.0

[node name="One" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_right = 54.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Two" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_left = 54.0
offset_right = 108.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Three" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_left = 108.0
offset_right = 162.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Four" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_left = 162.0
offset_right = 216.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Five" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_left = 216.0
offset_right = 270.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Six" type="ColorRect" parent="Progress"]
visible = false
layout_mode = 0
offset_left = 270.0
offset_right = 324.0
offset_bottom = 90.0
color = Color(0, 0.584314, 0, 1)

[node name="Message" type="Label" parent="."]
visible = false
offset_left = 231.0
offset_right = 407.0
offset_bottom = 64.0
text = "Success"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Source" type="OptionButton" parent="."]
offset_left = 14.0
offset_top = 64.0
offset_right = 142.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 1
popup/item_0/text = "File Source"
popup/item_0/id = 0

[node name="Target" type="OptionButton" parent="."]
offset_left = 494.0
offset_top = 64.0
offset_right = 622.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 12
selected = 0
item_count = 1
popup/item_0/text = "File Target"
popup/item_0/id = 0

[connection signal="close_requested" from="." to="." method="Kill"]
[connection signal="timeout" from="Timer" to="." method="TimeDelay"]
[connection signal="button_down" from="Transfer" to="." method="ButtonDown"]
[connection signal="button_up" from="Transfer" to="." method="ButtonUp"]
